# midpoint-agi

./: .env.example  .gitignore  0001-validator-modified-to-follow-the-async-pattern-of-de.patch  0002-validator-modified-to-follow-the-tool-usage-pattern-.patch  0003-fix-handler-of-goal-validation.patch  0004-executor-will-now-save-last_execution_results-into-g.patch  0005-improve-goal-diff-to-show-also-based-on-execution.patch  0006-improve-task-execution-tool-use-logging-and-memory-s.patch  0007-add-all-tool-calls-and-outputs-to-memory-when-execut.patch  CHANGELOG.md  Makefile  README.md  README_RECURSIVE_DECOMPOSITION.md  TESTING.md  USAGE.md  check_env.py  custom_goal_decomposer.py  debug_goal_decomposer.py  deep_decomposition_test.py  diff.txt  example_goal_decomposer.py  example_goal_decomposer_custom.py  example_goal_decomposer_custom_2.py  example_goal_decomposer_with_config.py  example_goal_decomposer_with_local_config.py  failed_goal_validator.patch  fix_test_hash.py  install-hooks.sh  json_extraction_test_results.txt  llm_prompt_20250413_203006_Factorize_and_centralize_the_L.txt  llm_prompt_20250413_203116_Create_a_centralized_configura.txt  local_config.py  memory_tests.txt  pre-commit-hook  pyproject.toml  real_api_test.py  requirements.txt  run_custom_goal_decomposer.py  run_midpoint.sh  run_midpoint_goal_decomposer.py  (+10 more)
.goal/: G1-S1.json  G1.json
agents/: __init__.py  config.py  core_agents.py  models.py  orchestrator.py  repo_context.py  tools.py
checkpoints/: futarchy_test_checkpoint.json
debug/: README.md  call_memory_diff_t1.py  compare_memory.py  find_first_commit.py  get_memory_diff_debug.py  real_api_test.py  retrieve_memory.py  run_goal_decomposer.py  run_orchestrator.py  run_task_executor.py  test_goal_decomposer.py  test_goal_decomposer_live.py  test_memory_diff.py  test_orchestrator.py  test_recursive_decomposition.py  test_task_executor.py  update_g1_memory.py
docs/: DISCUSSION-1.md  FEATURES.md  VISION.md  goal_cli.md  goal_cli_visuals.md  goal_decompose.md  memory_system.md
examples/: README.md  __init__.py  advanced_agent_example.py  basic_agent.py  setup_test_repo.py  test_api.py  test_deep_flow.py  test_full_flow.py  test_goal_decomposer.py  test_repo_operations.py  test_task_executor.py  verify_setup.py
scripts/: goal_memory.py  init_memory_repo.py  memory_example.py  memory_integration.py  memory_revert_example.py  memory_tools.py  run.py
tests/: README.md  __init__.py  cleanup_test_repo.py  conftest.py  mock_openai_script.py  run_tool_tests.py  test_asyncio_patterns.py  test_execute_simple_task.py  test_filesystem_tools.py  (+33 more)
(+81 files in other folders)
