[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "midpoint"
version = "0.1.0"
description = "An advanced AI orchestration system for solving complex problems"
authors = [
    {name = "Midpoint Team", email = "info@midpoint.ai"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "aiohttp>=3.9.0",
    "gitpython>=3.1.40",
    "openai>=1.12.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.1.0",
    "isort>=5.10.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["midpoint", "midpoint.agents", "midpoint.testing"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"
# Register our custom plugin for environment checks
confcutdir = "src/midpoint/testing"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88 