[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "midpoint"
version = "0.1.0"
description = "An advanced AI orchestration system for solving complex problems"
authors = [
    {name = "Midpoint Team", email = "info@midpoint.ai"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.9.3",
    "gitpython>=3.1.40",
    "openai>=1.12.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "tavily-python>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.1.0",
    "isort>=5.10.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["midpoint", "midpoint.agents", "midpoint.testing", "midpoint.utils", "midpoint.scripts"]

[project.scripts]
goal = "midpoint.goal_cli:main"
goal-validator = "midpoint.goal_validator_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"
# Register path to our custom testing plugin
pythonpath = ["src"]
# Set the default fixture loop scope for asyncio
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
# Filter warnings
filterwarnings = [
    "ignore::urllib3.exceptions.NotOpenSSLWarning",
    "ignore::DeprecationWarning"
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88 